Adjusting width values to fix minor layout issues.

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -39,10 +39,10 @@ p {
 }
 
 body {
-	min-width: 400px !important;
+	min-width: 440px !important;
 	background-color: var(--bs-white) !important;
 }
 
 main {
-	max-width: 992px !important;
+	max-width: 900px !important;
 }
